# Lotus-Biological-Agent

./: .gitignore  README.md  requirements.txt
lotus_pipeline/data_root/: lotus.db  lotus.db-shm  lotus.db-wal
lotus_pipeline/data_root/cluster/test/: test01.h5ad  test_load.h5ad
lotus_pipeline/data_root/example_data/: demo_data.h5ad
lotus_pipeline/lotus/clustering/: __init__.py  clustering_core.py
lotus_pipeline/lotus/core_analysis/: _cplearn_core.py
lotus_pipeline/lotus/preprocessing/: __init__.py  _preprocess_core.py
lotus_pipeline/lotus/visualization/: __init__.py  _cplearn_visualization_core.py  _differential_expression_core.py  _pca_visualization_core.py
lotus_pipeline/lotus_backend/src/: main.py
lotus_pipeline/lotus_backend/test/: conftest.py
lotus_pipeline/lotus_core/: pyproject.toml
lotus_pipeline/lotus_core/src/lotus/: __init__.py
lotus_pipeline/lotus_core/src/lotus/annotation_analysis/: __init__.py  deg_analysis_core.py
lotus_pipeline/lotus_core/src/lotus/core_analysis/: __init__.py  _cplearn_core.py
lotus_pipeline/lotus_core/src/lotus/io/: __init__.py  _io_core.py
lotus_pipeline/lotus_core/src/lotus/preprocessing/: __init__.py  _preprocess_core.py
lotus_pipeline/lotus_core/src/lotus/visualization/: _advanced_classes_visualization_core.py  _cplearn_visualization_core.py  _embedding_visualization_core.py  _generic_visualization.py  _preprocessing_visualization_core.py  _trajectory_visualization_core.py
lotus_pipeline/lotus_core/test/test_lotus/: test_preprocess.py
lotus_pipeline/test/test_lotus/: test_preprocess.py
(+55 files in other folders)
